--- a/site/index.html
+++ b/site/index.html
@@ -29,7 +29,7 @@
 				var pullMultiplier = 1    ;
 				var minChangeFreq  = 1000 ;
 				var maxChangeFreq  = 3000 ;
-				var bubbleDragCoef = 0.5 ;
+				var bubbleDragCoef = 0.3  ;
 				
 				var bgColor = "#71D9E8";
 				var bubbles = $();
@@ -153,9 +153,25 @@
 		</div>
 		<div id="BlastZone"></div>
 		<div class="bubble" style="left:10em;top:20em;">See spot.  See spot run.  Run spot run.</div>
-		<div class="bubble bubble-left" style="left:2em;top:5em;">Speach nub on the left.</div>
+		<div class="bubble bubble-left" style="left:2em;top:5em;">Speech nub on the left.</div>
 		<div class="comic-page">
-			<div class="comic-frame"><div class="comic-frame-content"></div></div><div class="comic-frame comic-frame-twoThirds"><div class="comic-frame-content"></div></div><div class="comic-frame"><div class="comic-frame-content"></div></div><div class="comic-frame"><div class="comic-frame-content"></div></div><div class="comic-frame"><div class="comic-frame-content"></div></div>
+			<div class="comic-frame">
+				<div class="comic-frame-content">
+					<div class="comic-actionText comic-actionText-snapToFrame comic-actionText-bottomLeft">Action text goes here!!!</div>
+				</div>
+			</div><!--
+			--><div class="comic-frame comic-frame-twoThirds">
+				<div class="comic-frame-content"></div>
+			</div><!--
+			--><div class="comic-frame">
+				<div class="comic-frame-content"></div>
+			</div><!--
+			--><div class="comic-frame">
+				<div class="comic-frame-content"></div>
+			</div><!--
+			--><div class="comic-frame">
+				<div class="comic-frame-content"></div>
+			</div>
 		</div>
 	</body>
 </html>
