--- a/site/index.html
+++ b/site/index.html
@@ -144,16 +144,16 @@
 		<link href="css/style.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
-		<div id="HalfToneBlast">
-			<div id="HalfToneBlast-Bubbles"></div>
-			<div id="HalfToneBlast-Center">
-				<canvas id="HalfToneBlast-BlastRays" width="2000" height="2000"></canvas>
-				<div id="HalfToneBlast-Cap"></div>
+		<div id="Background">
+			<div id="HalfToneBlast">
+				<div id="HalfToneBlast-Bubbles"></div>
+				<div id="HalfToneBlast-Center">
+					<canvas id="HalfToneBlast-BlastRays" width="2000" height="2000"></canvas>
+					<div id="HalfToneBlast-Cap"></div>
+				</div>
 			</div>
 		</div>
 		<div id="BlastZone"></div>
-		<div class="bubble" style="left:10em;top:20em;">See spot.  See spot run.  Run spot run.</div>
-		<div class="bubble bubble-left" style="left:2em;top:5em;">Speech nub on the left.</div>
 		<div class="comic-page">
 			<div class="comic-frame">
 				<div class="comic-frame-content">
@@ -163,13 +163,26 @@
 			--><div class="comic-frame comic-frame-twoThirds">
 				<div class="comic-frame-content"></div>
 			</div><!--
+			--><div class="comic-frame comic-frame-full">
+				<div class="comic-frame-content">
+					<div class="bubble bubble-left" style="right:2em;top:5em;">Speech nub on the left.</div>
+				</div>
+			</div><!--
+			--><div class="comic-frame">
+				<div class="comic-frame-content"></div>
+			</div><!--
 			--><div class="comic-frame">
 				<div class="comic-frame-content"></div>
 			</div><!--
 			--><div class="comic-frame">
 				<div class="comic-frame-content"></div>
 			</div><!--
-			--><div class="comic-frame">
+			--><div class="comic-frame comic-frame-oneHalf">
+				<div class="comic-frame-content">
+					<div class="bubble" style="left:2em;top:1em;">See spot.  See spot run.  Run spot run.</div>
+				</div>
+			</div><!--
+			--><div class="comic-frame comic-frame-oneHalf">
 				<div class="comic-frame-content"></div>
 			</div>
 		</div>
