--- a/site/index.html
+++ b/site/index.html
@@ -154,37 +154,52 @@
 			</div>
 		</div>
 		<div id="BlastZone"></div>
-		<div class="comic-page">
-			<div class="comic-frame">
-				<div class="comic-frame-content">
-					<div class="comic-actionText comic-actionText-snapToFrame comic-actionText-bottomLeft">Action text goes here!!!</div>
+		<article>
+			<section class="comic-page">
+				<div class="comic-frame">
+					<div class="comic-frame-content">
+						<img src="img/temp-images/1.jpg" style="width:auto;height:100%;">
+						<div class="comic-actionText comic-actionText-snapToFrame comic-actionText-bottomLeft">Action text goes here!!!</div>
+					</div>
+				</div><!--
+				--><div class="comic-frame comic-frame-twoThirds">
+					<div class="comic-frame-content">
+						<img src="img/temp-images/2.jpg" style="width:100%;height:auto;">
+					</div>
+				</div><!--
+				--><div class="comic-frame comic-frame-full">
+					<div class="comic-frame-content">
+						<img src="img/temp-images/3.jpg" style="width:100%;height:auto;">
+						<div class="bubble bubble-left" style="right:2em;top:5em;font-size:0.75em;">Speech nub on the left.</div>
+					</div>
+				</div><!--
+				--><div class="comic-frame">
+					<div class="comic-frame-content">
+						<img src="img/temp-images/4.jpg" style="width:auto;height:100%;">
+					</div>
+				</div><!--
+				--><div class="comic-frame">
+					<div class="comic-frame-content">
+						<img src="img/temp-images/5.jpg" style="width:auto;height:100%;">
+					</div>
+				</div><!--
+				--><div class="comic-frame">
+					<div class="comic-frame-content">
+						<img src="img/temp-images/6.jpg" style="width:auto;height:100%;">
+					</div>
+				</div><!--
+				--><div class="comic-frame comic-frame-oneHalf">
+					<div class="comic-frame-content">
+						<img src="img/temp-images/7.jpg" style="width:100%;height:auto;">
+						<div class="bubble" style="left:2em;top:1em;font-size:0.75em;">See spot.  See spot run.  Run spot run.</div>
+					</div>
+				</div><!--
+				--><div class="comic-frame comic-frame-oneHalf">
+					<div class="comic-frame-content">
+						<img src="img/temp-images/8.jpg" style="width:100%;height:auto;">
+					</div>
 				</div>
-			</div><!--
-			--><div class="comic-frame comic-frame-twoThirds">
-				<div class="comic-frame-content"></div>
-			</div><!--
-			--><div class="comic-frame comic-frame-full">
-				<div class="comic-frame-content">
-					<div class="bubble bubble-left" style="right:2em;top:5em;">Speech nub on the left.</div>
-				</div>
-			</div><!--
-			--><div class="comic-frame">
-				<div class="comic-frame-content"></div>
-			</div><!--
-			--><div class="comic-frame">
-				<div class="comic-frame-content"></div>
-			</div><!--
-			--><div class="comic-frame">
-				<div class="comic-frame-content"></div>
-			</div><!--
-			--><div class="comic-frame comic-frame-oneHalf">
-				<div class="comic-frame-content">
-					<div class="bubble" style="left:2em;top:1em;">See spot.  See spot run.  Run spot run.</div>
-				</div>
-			</div><!--
-			--><div class="comic-frame comic-frame-oneHalf">
-				<div class="comic-frame-content"></div>
-			</div>
-		</div>
+			</section>
+		</article>
 	</body>
 </html>
